--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@refinedev/chakra-ui": "^2.27.1",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.46.1",
     "@refinedev/devtools": "^1.1.29",
     "@refinedev/inferencer": "^4.5.16",
     "@refinedev/kbar": "^1.3.5",
+    "@refinedev/react-hook-form": "^4.8.13",
+    "@refinedev/react-router-v6": "^4.5.5",
+    "@refinedev/react-table": "^5.6.5",
+    "@refinedev/simple-rest": "^5.0.1",
+    "@tabler/icons": "^1.1.0",
+    "axios": "^1.6.5",
+    "chakra-dayzed-datepicker": "^0.2.10",
+    "date-fns": "^3.2.0",
+    "dayzed": "^3.2.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.8.1",
-    "@refinedev/chakra-ui": "^2.27.1",
-    "@refinedev/react-hook-form": "^4.8.13",
-    "@refinedev/react-table": "^5.6.5",
-    "@tabler/icons": "^1.1.0",
-    "@chakra-ui/react": "^2.5.1",
     "react-hook-form": "^7.30.0",
-    "@refinedev/react-router-v6": "^4.5.5",
-    "@refinedev/simple-rest": "^5.0.1"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/node": "^18.16.2",
