--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@refinedev/react-table": "^5.6.5",
     "@refinedev/simple-rest": "^5.0.1",
     "@tabler/icons": "^1.1.0",
-    "axios": "^1.6.5",
+    "axios": "^1.6.2",
     "chakra-dayzed-datepicker": "^0.2.10",
     "date-fns": "^3.2.0",
     "dayzed": "^3.2.3",
+    "query-string": "^7.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
